added file and code v1.1

--- a/index.html
+++ b/index.html
@@ -1,14 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hi</h1>
-    <h2>This is Shakil</h2>
-    <p>Okay got it</p>
-    <p>another commit</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Airport Security Management</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <!-- Navigation Bar -->
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="passenger_guide.html">Passenger Guide</a></li>
+        <li><a href="security_equipment.html">Security Equipment</a></li>
+        <li><a href="prohibited_items.html">Prohibited Items</a></li>
+        <li><a href="flightinfo.html">Flight Info</a></li>
+      </ul>
+    </nav>
+    <div class="img">
+      <img src="Images/biman.png" alt="" />
+    </div>
+    <div class="horizontal-bar"></div>
+
+    <!-- Content -->
+    <div class="container-outer">
+      <div class="container2">
+        <h1>Welcome to Airport Security Management System</h1>
+      </div>
+    </div>
+    <div class="para">
+      <p>
+        Welcome to Hazrat Shahjalal International Airport (HSIA) – your gateway
+        to vibrant Dhaka and beautiful Bangladesh! We understand the excitement
+        and challenges of travel, and we're always with you to make your journey
+        a good experience. Located in Kurmitola, just 17 kilometers from Dhaka's
+        vibrant center, HSIA has a glorious history, evolving from its role as
+        'Dhaka International Airport' in 1980 to its current status, named after
+        Hazrat Shahjalal, a revered Sufi saint.<br /><br />
+        With an annual passenger handling capacity of 18.5 million and over 190
+        daily international flights, we prioritize putting "Respected Passengers
+        First" in every aspect of our service. Your feedback is extremely
+        valuable, and our dedicated professional team is available 24/7 to
+        assist you. Thank you for choosing HSIA as your travel hub. As a
+        respected passenger, your seamless journey is always our top priority.
+      </p>
+    </div>
+    <div class="discover">
+      <div class="heading">Discovery</div>
+      <div class="discover-grid">
+        <div class="grid">
+          <img src="Images/img-01.jpg" alt="" />
+        </div>
+        <div class="grid">
+          <img src="Images/img-02.jpg" alt="" />
+        </div>
+        <div class="grid">
+          <img src="Images/img-03.jpg" alt="" />
+        </div>
+        <div class="grid">
+          <img src="Images/img-04.jpg" alt="" />
+        </div>
+        <div class="grid">
+          <img src="Images/img-05.jpg" alt="" />
+        </div>
+        <div class="grid">
+          <img src="Images/img-06.jpg" alt="" />
+        </div>
+        <div class="grid">
+          <img src="Images/img-07.jpg" alt="" />
+        </div>
+        <div class="grid">
+          <img src="Images/img-08.jpg" alt="" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
